--- a/test/test.html
+++ b/test/test.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
 <script src="../../es6-module-loader/lib/es6-module-loader.js" type="text/javascript"></script>
-<script src="../jspm-loader.js" type="text/javascript"></script>
+<script src="../loader.js" type="text/javascript"></script>
 
 <script>
   jspm.import('test-runner', function(runner) {
