--- a/test/test.html
+++ b/test/test.html
@@ -15,7 +15,38 @@
       {
         name: 'Basic exporting & importing',
         run: function(complete) {
-          jspm.import(['tests/default1', 'tests/default2', 'tests/default3'], complete)
+          var m1, m2, m3, err;
+          var checkComplete = function() {
+            if (m1 && m2 && m3 && err)
+              complete(m1, m2, m3);
+          }
+          jspm.import(['tests/default1'], function(_m1) {
+            if (m1 === undefined)
+              m1 = null;
+            else
+              m1 = _m1;
+            checkComplete();
+          });
+          jspm.import(['tests/default1'], function(_m1) {
+            if (m1 === undefined)
+              m1 = null;
+            else
+              m1 = _m1;
+            checkComplete();
+          });
+          jspm.import(['tests/default2'], function(_m2) {
+            m2 = _m2;
+            checkComplete();
+          });
+          jspm.import(['tests/asdf'], function() {
+          }, function(_err) {
+            err = _err;
+            checkComplete();
+          });
+          jspm.import('tests/default3', function(_m3) {
+            m3 = _m3;
+            checkComplete();
+          });
         },
         confirm: function(m1, m2, m3) {
           if (m1 != 'default1')
