--- a/test/jquery-compare.html
+++ b/test/jquery-compare.html
@@ -1,3 +1,9 @@
 <!doctype html>
 <html>
-<script src="https://github.jspm.io/components/jquery@2.0.3/jquery.js"></script>
+<script src="https://jspm.io/loader.js"></script>
+<script>
+  var startTime = Date.now();
+  jspm.import('github:components/jquery@2.0.3/jquery', function($) {
+    document.body.innerHTML = 'Loaded in ' + (Date.now() - startTime) + 'ms.';
+  });
+</script>
