--- a/test/test.html
+++ b/test/test.html
@@ -281,10 +281,9 @@
       {
         name: 'Font plugin',
         run: function(complete) {
-          jspm.import('#google Port Lligat Slab, Droid Sans !font', complete);
+          jspm.import('#google Port Lligat Slab !font', complete);
         },
         confirm: function(m) {
-
         }
       },
       {
