--- a/test/test.html
+++ b/test/test.html
@@ -291,7 +291,7 @@
       {
         name: 'Font plugin',
         run: function(complete) {
-          jspm.import('#google Port Lligat Slab, Droid Sans !font', complete);
+          jspm.import('#google Port Lligat Slab !font', complete);
         },
         confirm: function(m) {
         }
